add some styles to the provider detail items

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/provider-details.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/provider-details.twig
@@ -1,4 +1,4 @@
-<div class="provider-details {% if detail.sidebar == 'true' %}provider-detail--side{% endif %}">
+<div class="provider-details {% if detail.sidebar == 'true' %}provider-details--side{% endif %}">
   
   <h2 class="provider-detail__label">{{detail.label}}</h2>
   
