--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
@@ -1,8 +1,8 @@
 .provider-header {
   margin-top: 3em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   padding-bottom: 2em;
-  border-bottom: 1px solid $trust-ltst;
+  // border-bottom: 1px solid $trust-ltst;
 }
 
 .provider-header__content {
