--- a/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--footer.html.twig
@@ -24,7 +24,7 @@
   } %}
 {% endblock %}
 {% block social %}
-  Placeholder for social links
+  {{ drupal_entity('block', 'tower_health_footer_social_menu') }}
 {% endblock %}
 {% block contact %}
   {{ drupal_entity('block', 'tower_health_footer_contact_info') }}
