--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
@@ -3,25 +3,7 @@
 }
 
 .provider-details--side {
-  background-color: $growth-ltst;
-  padding: 1.5em 1.5em;
-  margin-bottom: 0;
-  position: relative;
-  
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: -2em;
-    width: 2em;
-    background-color: $growth-ltst;
-    
-    @include breakpoint($bp5) {
-      width: calc(1.5em + ((100vw - 1350px) / 2));
-      right: calc(-1.5em - ((100vw - 1350px) / 2));
-    }
-  }
+  margin-bottom: 2em;
 }
 
 .provider-detail__label {
