Working icons without D8 working.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.twig
@@ -32,8 +32,9 @@
   {% if items %}
     {% for item in items %}
           {% include "@atoms/social-icon/social-icon.twig" with {
-            "svg": item.field_social_icon,
-            "url": item.url
+            "svg": item.svg,
+            "url": item.url,
+            "title": item.title
           } %}
     {% endfor %}
   {% endif %}
