--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/social-icon/social-icon.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/social-icon/social-icon.twig
@@ -1,4 +1,4 @@
 <a href="{{ url }}"">
-  <span class="hide">{{ title }}</span>
+  <span class="element-invisible">{{ title }}</span>
   {% include svg %}
 </a>
