--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
@@ -25,6 +25,10 @@
     } %}
     
     {% include "@molecules/provider-details/provider-details.twig" with {
+      detail: locations
+    } %}
+    
+    {% include "@molecules/provider-details/provider-details.twig" with {
       detail: certification
     } %}
     
