--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -140,11 +140,22 @@
   a:focus {
     text-decoration: underline;
   }
+  
+  .teaser--small & {
+    @include adjust-font-size-to($sm-heading, 1.1);
+    background-color: none;
+    padding: 0;
+  }
 
   @include breakpoint($bp2) {
     position: relative;
     margin-top: 1em;
     width: calc(100% - 225px);
+    
+    .teaser--small & {
+      position: static;
+      width: auto;
+    }
   }
 
   @include breakpoint($bp3) {
@@ -154,6 +165,14 @@
     margin-top: 0;
     margin-bottom: -2.25em;
     top: -2.25em;
+    
+    .teaser--small & {
+      display: block;
+      position: static;
+      width: auto;
+      margin-bottom: 0;
+      padding: 0;
+    }
   }
 }
 
@@ -225,6 +244,13 @@
 
   @include breakpoint($bp3) {
     margin-bottom: .25em;
+  }
+  
+  .teaser--small & {
+    .icon-button {
+      width: 140px;
+      margin-top: .5em;
+    }
   }
 }
 
@@ -321,25 +347,6 @@
 }
 
 
-
-// Animations
-
-.cssanimations {
-
-  // default states
-  .teaser,
-  .teaser--simple {
-    opacity: 0;
-  }
-
-  // animating in
-  .in-view.teaser,
-  .in-view.teaser--simple {
-    animation: fadeInUp .25s ease-in-out .35s forwards;
-  }
-}
-
-
 // Simple variation styles
 .teaser--simple {
   max-width: 1100px;
@@ -384,5 +391,103 @@
 
   span {
     font-weight: 700;
+  }
+}
+
+// small variations
+.teaser--small {
+  margin: 1em 0;
+}
+
+.teaser--small__content {
+  text-align: left;
+
+  @include breakpoint($bp2) {
+    clear: both;
+  }
+
+  @include breakpoint($bp3) {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    position: relative;
+  }
+}
+
+.teaser--small__content__info {
+  @include adjust-font-size-to($sm-text, .9);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  @include breakpoint($bp3) {
+    clear: none;
+    flex-grow: 1;
+    width: 80%;
+  }
+}
+
+.teaser__link--small {
+  
+  @include breakpoint($bp3) {
+    flex: 1 1 20%;
+    text-align: right;
+  }
+}
+
+.teaser__link {
+  @include adjust-font-size-to($label, .6);
+  @extend %track-out;
+  display: inline-block;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
+  
+  svg {
+    height: .75em;
+    width: .75em;
+    fill: $trust-aa;
+    margin-left: .25em;
+  }
+  
+  &:active,
+  &:hover,
+  &:focus {
+    svg {
+      fill: $primary-dark;
+    }
+  }
+  
+  @include breakpoint($bp3) {
+    @include adjust-font-size-to($crumb, .5);
+    margin-right: 1.75em;
+    
+    svg {
+      position: absolute;
+      height: 100%;
+      top: 0;
+      right: -1.75em;
+      width: .75em;
+      fill: $trust-aa;
+      margin-left: .25em;
+    }
+  }
+}
+
+// Animations
+
+.cssanimations {
+
+  // default states
+  .teaser,
+  .teaser--simple {
+    opacity: 0;
+  }
+
+  // animating in
+  .in-view.teaser,
+  .in-view.teaser--simple {
+    animation: fadeInUp .25s ease-in-out .35s forwards;
   }
 }
