--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
@@ -53,6 +53,11 @@
       } %}
       
       {% include "@molecules/provider-details/provider-details.twig" with {
+        detail: insurance,
+        'detail.sidebar': 'true'
+      } %}
+      
+      {% include "@molecules/provider-details/provider-details.twig" with {
         detail: employed,
         'detail.sidebar': 'true'
       } %}
