Add social_icon field from drupal. Add patterlab filter file_url to fix patternlab error.

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/social-icon/social-icon.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/social-icon/social-icon.twig
@@ -1,4 +1,6 @@
-<a href="{{ url }}"">
+<a href="{{ url }}">
   <span class="element-invisible">{{ title }}</span>
-  {% include svg %}
+  {% if svg %}
+    {% include svg %}
+  {% endif %}
 </a>
