--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -21,6 +21,7 @@
   <script src="../../../../dist/01-atoms/05-forms/chosen/chosen-select.js"></script>
   <script src="../../../../dist/03-organisms/listings/listing-filter/listing-filters.js"></script>
   <script src="../../../../dist/02-molecules/modal/modal.js"></script>
+  <script src="../../../../dist/03-organisms/review-listing/review-listing.js"></script>
 
   </body>
 </html>
