--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
@@ -1,7 +1,7 @@
 .review {
   margin-bottom: 1em;
   padding-bottom: 1em;
-  border-bottom: 1px solid $trust-ltst;
+  border-bottom: 1px solid $off-white;
   
   .ratings-count {
     margin-bottom: 1em;
