--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
@@ -39,7 +39,7 @@
   {% endblock %}
   
   {% block bottom_page_sidebar %}
-    <div class="sidebar--growth">
+    <div class="sidebar--growth js-section-animation">
       {% include "@molecules/provider-details/provider-details.twig" with {
         detail: language,
         'detail.sidebar': 'true'
