--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -225,4 +225,12 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
       right: calc(-1.5em - ((100vw - 1500px) / 2));
     }
   }
+  
+  .cssanimations & {
+    opacity: 0;
+  }
+  
+  .cssanimations &.in-view {
+    animation: fadeInRight .5s ease forwards;
+  }
 }
