--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/_review-listing.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/_review-listing.scss
@@ -19,6 +19,14 @@
       left: calc(-2em - ((100vw - 1500px) / 2));
     }
   }
+  
+  .cssanimations & {
+    opacity: 0;
+  }
+  
+  .cssanimations &.in-view {
+    animation: fadeInLeft .5s ease forwards;
+  }
 }
 
 .review-summary {
