--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
@@ -2,7 +2,8 @@
   page_header: TRUE,
   top_sidebar: FALSE,
   bottom_sidebar: TRUE,
-  full_width: false
+  full_width: false,
+  page_background: true
 }%}
   
   {% block page_header %}
