--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -234,3 +234,34 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
     animation: fadeInRight .5s ease forwards;
   }
 }
+
+.main-content--background {
+  position: relative;
+  
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background: url(/pattern-lab/public/images/th-mark.svg);
+    background-size: 80%;
+    background-position: 100% 20%;
+    background-repeat: no-repeat;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: .2;
+  }
+}
+
+.cssanimations {
+  
+  .main-content--background::after {
+    opacity: 0;
+  }
+    
+  .main-content--background.in-view::after {
+    opacity: .2;
+    transition: opacity .75s ease;
+  }
+}
