--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -143,7 +143,7 @@
   
   .teaser--small & {
     @include adjust-font-size-to($sm-heading, 1.1);
-    background-color: none;
+    background-color: transparent;
     padding: 0;
   }
 
