slight modifications to provider detail page

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
@@ -1,5 +1,5 @@
 {{ attach_library('tower_health/reviews') }}
-<section class="review-listing js-section-animation">
+<section id="ratings" class="review-listing js-section-animation">
   <div class="review-summary">
     <h2 class="review-summary__title">Ratings & Reviews</h2>
     <a class="review-summary__link" href="{{review_url}}">About our Ratings & Criteria</a>
